Actualiza Real Decreto sobre PO de REE

--- a/biblio.bib
+++ b/biblio.bib
@@ -11678,27 +11678,24 @@
   Url                      = {http://re.jrc.ec.europa.eu/pvgis/}
 }
 
-@Misc{RD-14-2010,
+@legislation{RD-14-2010,
   Title                    = {Real Decreto-ley 14/2010, de 23 de diciembre, por el que se establecen medidas urgentes para la corrección del déficit tarifario del sector eléctrico.},
-
-  Owner                    = {oscar},
-  Timestamp                = {30.01.2011},
+Author = {BOE},
+Year = 2010,
   Url                      = {http://www.boe.es/boe/dias/2010/12/24/pdfs/BOE-A-2010-19757.pdf}
 }
 
-@Misc{RD1565-2010,
-  Title                    = {Real Decreto 1565/2010, de 19 de noviembre, por el que se regulan y modifican determinados aspectos relativos a la actividad de producción de energía eléctrica en régimen especial.},
-
-  Owner                    = {oscar},
-  Timestamp                = {30.01.2011},
-  Url                      = {http://www.boe.es/boe/dias/2010/11/23/pdfs/BOE-A-2010-17976.pdf}
+@legislation{RD-413-2014,
+  Title                    = {Real Decreto 413/2014, de 6 de junio, por el que se regula la actividad de producción de energía eléctrica a partir de fuentes de energía renovables, cogeneración y residuos.},
+  Author = {BOE},
+  Year = 2014,
+  Url                      = {https://www.boe.es/eli/es/rd/2014/06/06/413/con}
 }
 
-@Misc{RD-661-2007,
+@legislation{RD-661-2007,
   Title                    = {Real Decreto 661/2007, de 25 de mayo, por el que se regula la actividad de producción de energía eléctrica en régimen especial.},
-
-  Owner                    = {oscar},
-  Timestamp                = {30.01.2011},
+  Author = {BOE},
+  Year = 2007,
   Url                      = {http://www.boe.es/boe/dias/2007/05/26/pdfs/A22846-22886.pdf}
 }
 
@@ -11725,10 +11722,7 @@
 @Misc{RDL13-2012,
   Title                    = {Real Decreto-ley 13/2012, de 30 de marzo, por el que se transponen directivas en materia de mercados interiores de electricidad y gas y en materia de comunicaciones electrónicas, y por el que se adoptan medidas para la corrección de las desviaciones por desajustes entre los costes e ingresos de los sectores eléctrico y gasista.},
   Year                     = {2012},
-
-  File                     = {:BOE-A-2012-4442.pdf:PDF},
-  Owner                    = {oscar},
-  Timestamp                = {2012.07.10},
+Author = {BOE},
   Url                      = {www.boe.es/boe/dias/2012/03/31/pdfs/BOE-A-2012-4442.pdf}
 }
 
@@ -11736,10 +11730,8 @@
   Title                    = {Real Decreto 1699/2011, de 18 de noviembre, por el que se regula la conexión a red de instalaciones de producción de energía eléctrica de pequeña potencia.},
   Month                    = {12},
   Year                     = {2011},
-
   File                     = {:BOE-A-2011-19242.pdf:PDF;:BOE-A-2011-19242.epub:Text},
-  Owner                    = {oscar},
-  Timestamp                = {07.01.2012},
+Author = {BOE},
   Url                      = {http://boe.es/boe/dias/2011/12/08/pdfs/BOE-A-2011-19242.pdf}
 }
 
