--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -872,12 +872,14 @@ resultado indica que el riesgo asociado al accidente eléctrico por
 que ya existe en las instalaciones eléctricas. 
 \end{itemize}
 
-Cerramos esta sección destacando la reciente exigencia recogida 
-en el RD 1565/2010 \cite{RD1565-2010}, según la cual los sistemas 
-fotovoltaicos quedan obligados al cumplimiento del
-procedimiento de operación PO 12.3 sobre requisitos de respuesta ante
-huecos de tensión. Esta exigencia puede entrar en contradicción con la
-vigilancia anti-isla, y aún debe ser regulada con mayor precisión. 
+Cerramos esta sección destacando la exigencia recogida en el RD
+413/2014 \cite{RD-413-2014}, según la cual las instalaciones o
+agrupaciones de instalaciones fotovoltaicas de potencia instalada
+superior a $\qty{2}{\mega\watt}$ están obligadas al cumplimiento de
+los requisitos de respuesta frente a huecos de tensión mediante el
+procedimiento de operación dictado por Red Eléctrica de
+España\footnote{En la siguiente página web están disponibles los procedimientos de operación de REE:  \url{https://www.ree.es/es/actividades/operacion-del-sistema-electrico/procedimientos-de-operacion}
+  }.
 
 \section{Configuración de un SFCR}
 
