Corrige cálculos de secciones en ejercicio

--- a/libro/Ejercicios.tex
+++ b/libro/Ejercicios.tex
@@ -1018,16 +1018,17 @@ Así, para el primer tramo los cálculos se basan en las siguientes condiciones:
 \begin{align*}
   I & = 12 \cdot 4.35 = \SI{52.2}{\ampere}\\
   V_{nom} & = 11 \cdot 46.08 = \SI{506.88}{\volt}\\
-  \Delta V & = \SI{2.53}{\volt}
+  \Delta V & = \SI{2.53}{\volt}\\
+  \gamma_{70} &= \SI{48}{\meter\per\ohm\per\milli\meter\squared}
 \end{align*}
 
 y los resultados son:
 
 \begin{align*}
-  s_1 & = \SI{51.49}{\milli\meter\squared}\\
-  s_2 & = \SI{22.07}{\milli\meter\squared}\\
-  s_3 & = \SI{29.41}{\milli\meter\squared}\\
-  s_4 & = \SI{0.74}{\milli\meter\squared}\\
+  s_1 & = \SI{60.18}{\milli\meter\squared}\\
+  s_2 & = \SI{25.8}{\milli\meter\squared}\\
+  s_3 & = \SI{34.4}{\milli\meter\squared}\\
+  s_4 & = \SI{0.86}{\milli\meter\squared}\\
 \end{align*}
 
 A continuación, debemos comprobar que estas secciones cumplen el
@@ -1089,10 +1090,10 @@ condiciones son:
   I & =\SI{208.8}{\ampere}\\
   V_{nom} & = \SI{506.88}{\volt}\\
   \Delta V & = \SI{5.07}{\volt}\\
-  L & = \SI{90}{\meter}
+  L & = \SI{85}{\meter}
 \end{align*}
 
-que conducen a una sección de $s=\SI{132.5}{\milli\meter\squared}$,
+que conducen a una sección de $s=\SI{145.9}{\milli\meter\squared}$,
 que corresponde a una sección normalizada de
 $\SI{150}{\milli\meter\squared}$.
 
