--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -1011,8 +1011,8 @@ $L_{dc}$ la distancia a cubrir con un circuito de corriente continua
 (el factor 2 tiene en cuenta que se necesitan dos conductores para
 este circuito), $\gamma_\theta$ la conductividad del conductor a una temperatura
 de operación determinada\footnote{La conductividad del cobre a 20ºC de
-  temperatura de operación es $\gamma_{20} =\SI{56}{\meter\per\ohm\per\milli\meter\squared}$ mientras que a 70ºC es
-$\gamma_{70} = \SI{48}{\meter\per\ohm\per\milli\meter\squared}$.},
+  temperatura de operación es $\gamma_{20} =\SI{58}{\meter\per\ohm\per\milli\meter\squared}$ mientras que a 70ºC es
+$\gamma_{70} = \SI{48}{\meter\per\ohm\per\milli\meter\squared}$. Cuando un cable está en operación su temperatura alcanza este valor, por lo que es adecuado emplear $\gamma_{70}$.},
 $I_{dc}$ la corriente nominal (habitualmente la del punto MPP) que
 circula por el circuito de corriente continua, y $\Delta V_{dc}$ la
 caída de tensión existente entre la entrada y la salida del circuito
@@ -1063,7 +1063,7 @@ salida de un inversor trifásico, situado este a $\SI{100}{\meter}$ de
 la conexión a red, se deberá utilizar un cable de sección:
 
 \[
-  S=\frac{\sqrt{3} \cdot 0.021 \cdot100\cdot75}{\SI{1.5}{\percent}\cdot400}=\SI{45.46}{\milli\meter\squared}
+  S=\frac{\sqrt{3}\cdot100\cdot75}{48\cdot \SI{1.5}{\percent}\cdot400}=\SI{45.1}{\milli\meter\squared}
 \]
 
 Dado que la sección de los cables está normalizada, se deberá optar
@@ -1098,7 +1098,7 @@ la corriente del sistema, salvo en conexiones de corta longitud.
 Para más detalles sobre el proceso de cálculo, se invita al lector a
 repasar el ejercicio \ref{EjercicioCableado} y a la lectura del Anexo
 2 a las Guías de Aplicación del
-REBT\footnote{\url{www.f2i2.net/documentos/lsi/rbt/guias/guia_bt_anexo_2_sep03R1.pdf}}
+REBT\footnote{\url{https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/baja-tension/Documents/bt/guia_bt_anexo_2_sep03R1.pdf}}.
 
 
 
