--- a/diapos/RadiacionSolar_BasesDatos.org
+++ b/diapos/RadiacionSolar_BasesDatos.org
@@ -388,7 +388,7 @@ https://github.com/oscarperpinan/mds/wiki
 
 *** SAFs: Radiación 
 
-- *CM SAF*: Surface incoming shortwave radiation ([[https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21987_21988&fid=27][SIS]])
+- *CM SAF*: Surface incoming shortwave radiation ([[https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21987_21988&fid=27][Daily SIS]], [[https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21989_21990&fid=27][Monthly SIS]])
 
   - AEMET ha analizado las estimaciones para España en su [[http://www.aemet.es/es/serviciosclimaticos/datosclimatologicos/atlas_radiacion_solar][Atlas de Radiación]].
 
